fix: line-break strict for correct text wrapping
- In Japanese, allowing the text to wrap randomly
changes the meaning of the word. Have confirmed with a Japanese
speaker that using strict to allow the line to break
still retains the correct meaning.

- Used npm run build to make sure the asset minification isnt lost

--- a/style.css
+++ b/style.css
@@ -3494,6 +3494,7 @@ ul {
   white-space: pre;
 }
 .request-details dt {
+  line-break: strict;
   color: lighten($text_color, 20%);
   width: 40%;
 }
